samples/_failures_safe/1761445947_878f67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2527ae5e.c: In function ‘main’:
./samples/SAFE/__tmp_2527ae5e.c:162:19: error: missing terminating " character
  162 |         if (scanf("%
      |                   ^~
./samples/SAFE/__tmp_2527ae5e.c:162:9: error: expected expression at end of input
  162 |         if (scanf("%
      |         ^~
./samples/SAFE/__tmp_2527ae5e.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2527ae5e.c:162:9: error: expected declaration or statement at end of input
